--- a/styles/hero.css
+++ b/styles/hero.css
@@ -22,21 +22,37 @@
     margin-top: -89px;
 }
 
+@media (max-width: 992px) {
+    .hero.container {
+        padding-top: 60px;
+        padding-bottom: 65px;
+        min-height: 865px;
+    }
+
+    .img_group {
+        max-width: 160px;
+    }
+
+    .img_hero {
+        max-width: 757px;
+    }
+}
+
 @media (max-width: 768px) {
     .hero.container {
-        min-height: 413px;
+        min-height: 313px;
         padding-top: 48px;
     }
 
     .img_hero {
-        width: 309px;
+        max-width: 309px;
         margin-top: -40px;
-        margin-left: -20px;
     }
 
     .img_group {
-        width: 79px;
-        margin-top: 42px;
+        max-width: 79px;
+        margin-top: 25px;
+        left: 37%;
     }
 
     .hero_text {
