--- a/styles/background_grey.css
+++ b/styles/background_grey.css
@@ -122,6 +122,10 @@
 
     .scroll.container{
         padding-bottom: 30px;
+        max-width: 299px;
+        margin: 0 auto;
+        display: grid;
+        max-height: 374px;
     }
 
     .scroll_content {
