--- a/styles/hero.css
+++ b/styles/hero.css
@@ -6,7 +6,7 @@
 
 .img_group {
     position: relative;
-    width: 196px;
+    max-width: 196px;
     left: 70%;
     margin-top: -45px;
 }
@@ -17,9 +17,18 @@
 
 
 .img_hero {
-    position: absolute;
-    width: 924px;
+    max-width: 924px;
     margin-top: -89px;
+}
+
+.img_hero::after {
+    content: "";
+    background-image: url(../imgs/group21.png);
+    max-width: 196px;
+    width: 100%;
+    left: 70%;
+    position: absolute;
+    z-index: -1;
 }
 
 @media (max-width: 992px) {
