--- a/styles/bannner.css
+++ b/styles/bannner.css
@@ -78,6 +78,21 @@ h1 {
         z-index: -100;
     }
 
+    .banner_text p {
+        font-size: 14px;
+        line-height: 200%;
+    }
+
+    .banner_text span {
+        font-size: 16px;
+        line-height: 155.2%;
+    }
+
+    .banner_text button {
+        font-size: 15px;
+        line-height: 22px;
+    }
+
     h1 {
         min-width: 271px;
         font-weight: bold;
