--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Poppins';
+    font-family: 'Poppins', sans-serif;
     min-width: 375px;
 }
 
@@ -47,7 +47,11 @@ h2 {
         padding-right: 20px;
     }
 
-    .h3 {
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
         font-size: 16px;
     }
 
