--- a/styles/running_title.css
+++ b/styles/running_title.css
@@ -26,6 +26,7 @@
     max-width: 545px;
     margin-top: 5px;
     margin-bottom: 0;
+    margin: 5px 10px 20px 0;
 }
 
 h5 {
@@ -45,7 +46,10 @@ h5 {
 }
 
 .emeil {
+    margin-top: 20px;
+    margin-left: 5px;
     position: relative;
+    max-width: 386px;
 }
 
 .black_part button {
@@ -55,4 +59,27 @@ h5 {
     padding: 8px 13px 9px 22px;
     right: 6px;
     top: 6px;
+    border: none;
+    color: var(--white);
+}
+
+@media (max-width: 900px) {
+    .black_part {
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 21px 23px 21px;
+    }
+}
+
+@media (max-width: 576px) {
+    .black_part input {
+        min-width: 275px;
+    }
+
+    .black_part p {
+        font-size: 15px;
+        line-height: 22px;
+    }
 }
