--- a/styles/news_general.css
+++ b/styles/news_general.css
@@ -1,4 +1,12 @@
+.news {
+    display: flex;
+}
+
 .side {
     width: 50%;
     padding: 50px 16px 30px 0;
+}
+
+.news span {
+    color: var(--span_grey);
 }
