--- a/styles/background_grey.css
+++ b/styles/background_grey.css
@@ -110,6 +110,14 @@
     display: none;
 }
 
+@media (max-width: 992px) {
+    .scroll.container {
+        max-width: 900px;
+        gap: 30px;
+    }
+    
+}
+
 @media (max-width: 768px) {
     .background_grey {
         padding-bottom: 55px;
