--- a/styles/hero.css
+++ b/styles/hero.css
@@ -42,8 +42,13 @@
         padding-top: 48px;
     }
 
+    .hero.container {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
     .img_hero {
-        margin-top: 10px;
+        margin-top: 25px;
     }
 
     .img_hero::before {
