--- a/styles/links_game.css
+++ b/styles/links_game.css
@@ -65,6 +65,7 @@
     
     .game {
         display: block;
+        padding-top: 20px;
     }
 
     .suggestions{
@@ -74,6 +75,12 @@
     
     .suggestions:last-child {
         margin-bottom: 0;
+    }
+}
+
+@media (max:widht) {
+    .game {
+        padding-top: 0;
     }
 }
 
