--- a/styles/news_general.css
+++ b/styles/news_general.css
@@ -3,10 +3,61 @@
 }
 
 .side {
-    width: 50%;
+    max-width: 50%;
     padding: 50px 16px 30px 0;
 }
 
 .news span {
     color: var(--span_grey);
+}
+
+.news_part {
+    padding-bottom: 70px;
+}
+
+@media (max-width: 992px) {
+    .side {
+        max-width: 50%;
+        padding-top: 45px;
+    }
+
+    .news_part {
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: 768px) {
+    .news {
+        display: block;
+    }
+
+    .side {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 740px;
+        padding-top: 40px;
+        margin: 0 auto;
+    }
+
+    .news_part {
+        padding-bottom: 50px;
+    }
+}
+
+@media (max-width: 576px) {
+    .side {
+        min-width: 325px;
+        padding-top: 35px;
+    }
+
+    .news_part {
+        padding-bottom: 45px;
+    }
+}
+
+@media (max-width: 375px) {
+    .news_part {
+        padding-bottom: 41px;
+    }
 }
