--- a/styles/projects.css
+++ b/styles/projects.css
@@ -16,15 +16,13 @@
 .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
     margin: 0 -5px 40px -5px;
 }
 
 .gallery_img {
-    min-width: 306px;
     margin: 5px;
 }
 
