--- a/styles/side_right.css
+++ b/styles/side_right.css
@@ -1,10 +1,22 @@
+.right {
+    padding-top: 75px;
+}
+
 .thematic_block_img {
     max-width: 195px;
-    m5px
+    margin: 5px;
 }
 
 .thematic_block {
+    max-width: 535px;
     display: flex;
+    align-items: center;
+    margin: 60px 0 30px 15px;
+}
+
+.thematic_item {
+    margin-left: 5px;
+    max-width: 392px;
 }
 
 .thematic_item a {
@@ -25,6 +37,8 @@
     font-weight: 600;
     font-size: 23px;
     line-height: 34px;
+    margin-top: 23px;
+    margin-bottom: 5px;
 }
 
 .btn_blue {
@@ -45,4 +59,61 @@
 
 .btn_purple {
     background-color: #9921C3;
+}
+
+@media (max-width: 992px) {
+    .thematic_item a {
+        padding: 7px 25px 7px 25px;
+        margin-right: 14px;
+    }
+
+    .thematic_item h6 {
+        font-size: 20px;
+        line-height: 27px;
+        margin-top: 17px;
+        }
+}
+
+@media (max-width: 768px) {
+    .side.right {
+        padding-top: 0;
+    }
+
+    .thematic_item a {
+        padding: 6px 23px 6px 23px;
+        margin-right: 12px;
+    }
+
+    .thematic_item h6 {
+    font-size: 16px;
+    line-height: 22px;
+    margin-top: 13px;
+    }
+}
+
+@media (max-width: 576px) {
+
+    .thematic_item a {
+        padding: 5px 21px 5px 21px;
+        margin-right: 10px;
+    }
+
+    .thematic_item h6 {
+        font-size: 13px;
+        line-height: 19px;
+        }
+}
+
+@media (max-width: 375px) {
+
+    .thematic_item a {
+        padding: 4px 20px 4px 20px;
+        margin-right: 10px;
+    }
+
+    .thematic_item h6 {
+    font-size: 13px;
+    line-height: 19px;
+    margin-top: 13px;
+    }
 }
